# tnote

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE.md  tarpaulin-report.json
.claude/: settings.local.json
.claude/skills/tnote-agent/: SKILL.md
.claude/skills/tnote-manager/: SKILL.md
.claude/skills/tnote-plan/: SKILL.md
.claude/skills/tnote-summarize/: SKILL.md
.claude/skills/tnote-track/: SKILL.md
.codex/: config.toml
.codex/skills/tnote-agent/: SKILL.md
.github/workflows/: ci.yml  mark-latest-release.yml  release.yml
.kiro/steering/: tnote-agent.md  tnote-manager.md
skills/: README.md
skills/tnote-agent/: SKILL-claude.md  SKILL.md
skills/tnote-manager/: SKILL.md
skills/tnote-plan/: SKILL.md
skills/tnote-track/: SKILL.md
src/: config.rs  editor.rs  install.rs  lib.rs  main.rs  name_picker.rs  notes.rs  render.rs  tmux.rs  viewer.rs
tests/: cli.rs  unit_config.rs  unit_editor.rs  unit_install.rs  unit_notes.rs  unit_tmux.rs
tests/integration/: Dockerfile  run.sh
