[package]
name = "tnote"
version = "0.3.1"
edition = "2021"
description = "Terminal Notepad"
repository = "https://github.com/jykim16/tnote"
homepage = "https://github.com/jykim16/tnote"
license = "MIT"

[[bin]]
name = "tnote"

[lib]
name = "tnote"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
libc = "0.2"
owo-colors = { version = "4", features = ["supports-colors"] }
ratatui = "0.29"
portable-pty = "0.8"
vt100 = "0.15"

[dev-dependencies]
tempfile = "3"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = ["github"]
installers = ["shell", "homebrew"]
install-path = "~/.local/bin"
tap = "jykim16/homebrew-tap"
publish-jobs = ["homebrew"]
targets = [
  "aarch64-apple-darwin",
  "aarch64-unknown-linux-gnu",
  "aarch64-unknown-linux-musl",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-linux-musl",
]
pr-run-mode = "plan"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
